[tool.poetry]
name = "firsthalf"
version = "0.1.0"
description = ""
authors = ["Lightbells <takahasi0928@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
scipy = "^1.9.3"
simanneal = "^0.5.0"
matplotlib = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
