[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Lightbells <takahasi0928@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
deap = "^1.3.3"
scipy = "^1.9.3"
PyYAML = "^6.0"
pyswarms = "^1.3.0"
seaborn = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
